Adding 'easy-login' application. Updating templates and configurations for the project

--- a/easy_login_demo/home/templates/home.html
+++ b/easy_login_demo/home/templates/home.html
@@ -27,6 +27,8 @@
 
     <div class="mkt-s2 container">
     <h2 class="mkt-s2-h">Some another text here</h2>
+    {{ easy_login }}
+    {{ request.user }}
     <div class="mkt-s2-body">
         <div class="col-md-4 mkt-vp">
             <img class="" src="{{ STATIC_URL }}images/home.ico"/>
